Fix active nav underline: use visible border-bottom instead of subtle :before

--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -247,11 +247,9 @@
                 transform: scaleX(1); /* reveal*/
       }
 
-      &.active:before {
-        -webkit-transform: scaleX(1);
-            -ms-transform: scaleX(1);
-                transform: scaleX(1);
-        background: $primary-color;
+      &.active {
+        color: mix(#000, $primary-color, 25%);
+        border-bottom: 3px solid mix(#000, $primary-color, 25%);
       }
     }
   }
